@@ -4,6 +4,9 @@
 
  	0001 -- yonatan language learning model
 	0005 *** work on conditionals in compiler
+	DONE - fix back and initback,
+	0005 - handle sparse.
+	0005 - all sparse code slowed down? (lcn, master test).  rest of mnist speed-up due to not using ItemTensor?
 	0005 - todo: do we need the seq option to back?  is it the same as save?
 	0005 - initforw detects when there is a change and does not compute otherwise.  initback should do the same.
 	0005 - back.jl: where does Par.dif get zeroed out?  reset?
@@ -14,7 +17,7 @@
 	0005 - bmul!, baddforw!: make broadcasting ops take small array in either position, fix infersize by having a second pass that assumes add/mul are not broadcasting.
 	0005 - check TODO, test all
 	0005 - compound statements that involve axpb or alpha/beta in add/mul.
-	0005 - fix back and initback, util.jl:reset! handle sparse.
+	0005 - util.jl:reset!
 	0005 - fix compiler to reuse registers and share intermediate tmp
 	0005 - fix repeat
 	0005 - fix the relationship between par/arr and the new reg, use plist for par update options, implement update callbacks, maybe merge par and reg?
@@ -33,6 +36,9 @@
 	0010 - understand xavier/glorotuniform: it works so well, may inform gradient/weight clipping and reporting, i.e. if xavier is based on some norm, clip based on that norm.
 	0010 - saman: add msra init: arXiv:1502.01852, http://www.jmlr.org/proceedings/papers/v9/glorot10a/glorot10a.pdf
 	0020 saman: add lcn example to knet, push lcn branch to	master. confirm 3D works.
+	0020 saman: profile lcn
+	0020 saman: change default convolution to gemm, no speed diff but handles 3D
+	0020 saman: sent another kunet vs knet comparison.
 	0100 *** examples:
 	0101 - many-to-one and one-to-many mt training.  mt models that fix the hidden state.  swapping input-output languages fixing the hidden state.  learning paraphrase models from mt models.
 	0101 - need something for turkish translation to report to tubitak
